--- a/webserver/static/styles.css
+++ b/webserver/static/styles.css
@@ -7,11 +7,11 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    flex-direction: column;
   }
 
   .container {
     background: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(8px);
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 16px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
@@ -19,7 +19,27 @@ body {
     width: 320px;
   }
 
-  .container h2 {
+  .admContainer {
+    background: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 16px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    width: 90%;
+    height: 80%;
+  }
+
+  .headerText{
+    color: #011d2c;
+    text-shadow: 1px 1px 1px #fff;
+    font-size: 30px;
+    height: 15px;
+    padding-left: 5%;
+    align-self: flex-start;
+  }
+
+  .container h2 .headerText{
     text-align: center;
     margin-bottom: 20px;
     color: #064a72;
